# umi

./: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
migrations/: 20210313084850_users.up.sql  20210313220332_messages.up.sql
src/: main.rs
src/commands/: collect.rs  config.rs  markov.rs  meta.rs  mod.rs  stats.rs
src/data/: mod.rs  models.rs
src/events/: connection.rs  message.rs
src/utils/: db.rs
