[package]
name = "umi"
version = "0.1.0"
authors = ["Kot <kot@yukata.tech>"]
edition = "2018"

[dependencies]
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = "0.2"

serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

markov = { version = "1.1", features = ["graph"] }
petgraph = "0.5"

[dependencies.tokio]
version = "1.5"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
features = ["collector", "absolute_ratelimits"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "macros", "migrate", "offline", "postgres"]
